"MODULE.bazel Fabric part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

fabric_versions = {
    "b1.7.3": {
        "loader": "0.16.9",
        "yarn": "b1.7.3+e0778a3",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
        "modmenu": "1.8.5-beta.11",
        "flavor": "babric",
    },
    "1.5.2": {
        "api": "1.13.2+1.5.2",
        "loader": "0.15.11",
        "yarn": "1.5.2+build.576",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
        "flavor": "legacy",
    },
    "1.7.10": {
        "api": "1.13.2+1.7.10",
        "loader": "0.15.11",
        "yarn": "1.7.10+build.576",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
        "flavor": "legacy",
    },
    "1.8.8": {
        "loader": "0.15.11",
        "yarn": "1.8.8+build.551",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
        "flavor": "legacy",
    },
    "1.8.9": {
        "api": "1.13.2+1.8.9",
        "loader": "0.15.11",
        "yarn": "1.8.9+build.576",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
        "flavor": "legacy",
    },
    "1.12.2": {
        "api": "1.13.2+1.12.2",
        "loader": "0.15.11",
        "yarn": "1.12.2+build.576",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
        "flavor": "legacy",
    },
    "1.14.4": {
        "api": "0.28.5+1.14",
        "loader": "0.6.1+build.165",
        "modmenu": "1.7.17+build.1",
        "modmenu_legacy": True,
        "mixin": "0.7.11.38",
    },
    "1.16.5": {
        "api": "0.42.0+1.16",
        "loader": "0.8.9+build.203",
        "modmenu": "1.16.23",
        "mixin": "0.8+build.18",
    },
    "1.17.1": {
        "api": "0.46.1+1.17",
        "loader": "0.12.12",
        "modmenu": "2.0.17",
        "mixin": "0.10.7+mixin.0.8.4",
    },
    "1.18.1": {
        "api": "0.46.6+1.18",
        "loader": "0.13.0",
        "modmenu": "3.0.1",
        "mixin": "0.11.1+mixin.0.8.5",
    },
    "1.18.2": {
        "api": "0.77.0+1.18.2",
        "loader": "0.14.9",
        "modmenu": "3.2.5",
        "mixin": "0.11.4+mixin.0.8.5",
    },
    "1.19.2": {
        "api": "0.77.0+1.19.2",
        "loader": "0.14.9",
        "modmenu": "4.2.0-beta.2",
        "mixin": "0.11.4+mixin.0.8.5",
    },
    "1.20.1": {
        "api": "0.92.6+1.20.1",
        "loader": "0.16.10",
        "placeholder_api": "2.4.0-pre.1+1.20.4",
        "modmenu": "7.2.2",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.3.1",
    },
    "1.20.4": {
        "api": "0.97.3+1.20.4",
        "loader": "0.15.1",
        "placeholder_api": "2.4.0-pre.1+1.20.4",
        "modmenu": "9.2.0",
        "mixin": "0.12.5+mixin.0.8.5",
        "mixin_extras": "0.3.1",
    },
    "1.20.6": {
        "api": "0.100.8+1.20.6",
        "loader": "0.15.6",
        "placeholder_api": "2.4.0-pre.1+1.20.5",
        "modmenu": "10.0.0",
        "mixin": "0.12.5+mixin.0.8.5",
        "mixin_extras": "0.3.2",
    },
    "1.21": {
        "api": "0.102.0+1.21",
        "loader": "0.15.11",
        "placeholder_api": "2.4.0+1.21",
        "modmenu": "11.0.3",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
    },
    "1.21.1": {
        "api": "0.110.0+1.21.1",
        "loader": "0.15.11",
        "placeholder_api": "2.4.0+1.21",
        "modmenu": "11.0.3",
        "mixin": "0.13.3+mixin.0.8.5",
        "mixin_extras": "0.3.5",
    },
    "1.21.3": {
        "api": "0.112.1+1.21.3",
        "loader": "0.16.8",
        "placeholder_api": "2.5.0+1.21.2",
        "modmenu": "12.0.0",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.4": {
        "api": "0.113.0+1.21.4",
        "loader": "0.16.9",
        "placeholder_api": "2.5.0+1.21.2",
        "modmenu": "13.0.0-beta.1",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.5": {
        "api": "0.119.5+1.21.5",
        "loader": "0.16.10",
        "placeholder_api": "2.6.0+1.21.5",
        "modmenu": "14.0.0-rc.2",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.6": {
        "api": "0.126.1+1.21.6",
        "loader": "0.16.14",
        "placeholder_api": "2.7.0+1.21.6",
        "modmenu": "15.0.0-beta.3",
        "mixin": "0.15.5+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.7": {
        "api": "0.128.2+1.21.7",
        "loader": "0.16.14",
        "placeholder_api": "2.7.0+1.21.6",
        "modmenu": "15.0.0-beta.3",
        "mixin": "0.15.5+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.8": {
        "api": "0.129.0+1.21.8",
        "loader": "0.16.13",
        "placeholder_api": "2.7.1+1.21.6",
        "modmenu": "15.0.0-beta.3",
        "mixin": "0.15.4+mixin.0.8.7",
        "mixin_extras": "0.4.1",
    },
    "1.21.9": {
        "api": "0.134.0+1.21.9",
        "loader": "0.17.0",
        "placeholder_api": "2.8.0-rc.1+1.21.9",
        "modmenu": "16.0.0-rc.1",
        "mixin": "0.16.3+mixin.0.8.7",
        "mixin_extras": "0.5.0",
    },
    "1.21.10": {
        "api": "0.134.1+1.21.10",
        "loader": "0.17.0",
        "placeholder_api": "2.8.0+1.21.9",
        "modmenu": "16.0.0-rc.1",
        "mixin": "0.16.3+mixin.0.8.7",
        "mixin_extras": "0.5.0",
    },
    "1.21.11": {
        "api": "0.140.2+1.21.11",
        "loader": "0.17.3",
        "placeholder_api": "2.8.1+1.21.10",
        "modmenu": "17.0.0-beta.1",
        "mixin": "0.16.5+mixin.0.8.7",
        "mixin_extras": "0.5.0",
    },
    "26.1": {
        "intermediary": False,
        "api": "0.143.5+26.1",
        "loader": "0.18.4",
        "modmenu": "18.0.0-alpha.5",
        "mixin": "0.17.0+mixin.0.8.7",
        "mixin_extras": "0.5.0",
    },
}

[
    (
        maven.artifact(
            name = "maven_fabric_%s" % version.replace(".", "_"),
            artifact = "fabric-api",
            exclusions = ["net.fabricmc.fabric-api:fabric-api-deprecated"],
            group = "net.fabricmc.fabric-api",
            version = entry["api"],
        ),
        maven.install(
            name = "maven_fabric_%s" % version.replace(".", "_"),
            artifacts = [
                            "net.fabricmc.fabric-api:fabric-api:%s" % entry["api"],
                            "net.fabricmc:fabric-loader:%s" % entry["loader"],
                            ("io.github.prospector:modmenu:%s" % entry["modmenu"]) if "modmenu_legacy" in entry else ("com.terraformersmc:modmenu:%s" % entry["modmenu"]),
                            "net.fabricmc:sponge-mixin:%s" % entry["mixin"],
                            "net.fabricmc:fabric-language-kotlin:1.13.5+kotlin.2.2.10",
                        ] + (["eu.pb4:placeholder-api:%s" % entry["placeholder_api"]] if "placeholder_api" in entry else []) +
                        (["io.github.llamalad7:mixinextras-fabric:%s" % entry["mixin_extras"]] if "mixin_extras" in entry else []) +
                        (["net.fabricmc:intermediary:%s:v2" % version] if entry.get("intermediary", True) else []),
            fetch_sources = True,
            lock_file = "//game/%s:maven_install_fabric.json" % version,
            repositories = [
                "https://maven.fabricmc.net/",
                "https://repo1.maven.org/maven2/",
                "https://maven.terraformersmc.com/",
                "https://maven.nucleoid.xyz/",
            ],
        ),
        use_repo(maven, "maven_fabric_%s" % version.replace(".", "_")),
    )
    for version, entry in fabric_versions.items()
    if entry.get("flavor", "modren") == "modren"
]

[
    (
        maven.install(
            name = "maven_fabric_%s" % version.replace(".", "_"),
            artifacts = [
                            "net.legacyfabric:intermediary:%s:v2" % version,
                            "net.legacyfabric:yarn:%s:v2" % entry["yarn"],
                            "net.fabricmc:fabric-loader:%s" % entry["loader"],
                            "net.fabricmc:sponge-mixin:%s" % entry["mixin"],
                            "net.fabricmc:fabric-language-kotlin:1.13.5+kotlin.2.2.10",
                        ] + (["io.github.llamalad7:mixinextras-fabric:%s" % entry["mixin_extras"]] if "mixin_extras" in entry else []) +
                        (["io.github.llamalad7:mixinextras-fabric:%s" % entry["mixin_extras"]] if "mixin_extras" in entry else []) +
                        (["net.legacyfabric.legacy-fabric-api:legacy-fabric-api:%s" % entry["api"]] if "api" in entry else []),
            fetch_sources = True,
            lock_file = "//game/%s:maven_install_fabric.json" % version,
            repositories = [
                "https://maven.legacyfabric.net/",
                "https://maven.fabricmc.net/",
                "https://repo1.maven.org/maven2/",
            ],
        ),
        use_repo(maven, "maven_fabric_%s" % version.replace(".", "_")),
    )
    for version, entry in fabric_versions.items()
    if entry.get("flavor", "modren") == "legacy"
]

[
    (
        maven.install(
            name = "maven_fabric_%s" % version.replace(".", "_"),
            artifacts = [
                "babric:intermediary:%s:v2" % version,
                "net.glasslauncher:biny:%s:v2" % entry["yarn"],
                "net.fabricmc:fabric-loader:%s" % entry["loader"],
                "net.fabricmc:sponge-mixin:%s" % entry["mixin"],
                "net.fabricmc:fabric-language-kotlin:1.13.5+kotlin.2.2.10",
                "net.glasslauncher.mods:ModMenu:%s" % entry["modmenu"],
            ] + (["io.github.llamalad7:mixinextras-fabric:%s" % entry["mixin_extras"]] if "mixin_extras" in entry else []),
            fetch_sources = True,
            lock_file = "//game/%s:maven_install_fabric.json" % version,
            repositories = [
                "https://maven.glass-launcher.net/babric",
                "https://maven.glass-launcher.net/releases",
                "https://maven.fabricmc.net/",
                "https://repo1.maven.org/maven2/",
            ],
        ),
        use_repo(maven, "maven_fabric_%s" % version.replace(".", "_")),
    )
    for version, entry in fabric_versions.items()
    if entry.get("flavor", "modren") == "babric"
]
