"MODULE.bazel Minecraft part"

game_versions = {
    "1.7.10": {
        "mappings": False,
    },
    "1.8.8": {
        "mappings": False,
    },
    "1.8.9": {
        "mappings": False,
    },
    "1.12.2": {
        "mappings": False,
    },
    "1.14.4": {
        "mappings": True,
    },
    "1.16.5": {
        "mappings": True,
    },
    "1.17.1": {
        "mappings": True,
    },
    "1.18.1": {
        "mappings": True,
    },
    "1.18.2": {
        "mappings": True,
    },
    "1.19.2": {
        "mappings": True,
    },
    "1.20.1": {
        "mappings": True,
    },
    "1.20.4": {
        "mappings": True,
    },
    "1.20.6": {
        "mappings": True,
    },
    "1.21": {
        "mappings": True,
    },
    "1.21.1": {
        "mappings": True,
    },
    "1.21.3": {
        "mappings": True,
    },
    "1.21.4": {
        "mappings": True,
    },
    "1.21.5": {
        "mappings": True,
    },
    "1.21.6": {
        "mappings": True,
    },
    "1.21.7": {
        "mappings": True,
    },
    "1.21.8": {
        "mappings": True,
    },
    "1.21.9": {
        "mappings": True,
    },
    "1.21.10": {
        "mappings": True,
    },
    "1.21.11": {
        "mappings": True,
    },
    "26.1-snapshot-1": {
        "mappings": False,
    },
}

minecraft = use_extension("//repo:minecraft.bzl", "minecraft")

[
    minecraft.version(
        assets = True,
        client = True,
        client_mappings = entry["mappings"],
        server = True,
        server_mappings = entry["mappings"],
        version = version,
    )
    for version, entry in game_versions.items()
]

minecraft.exclude_library(names = [
    "org.ow2.asm:asm:9.3",
    "org.ow2.asm:asm:9.6",
])
use_repo(minecraft, "minecraft")
use_repo(minecraft, "minecraft_assets")
