"MODULE.bazel Minecraft part"

game_versions = {
    "b1.7.3": {"server": False},
    "1.2.5": {},
    "1.5.2": {},
    "1.7.10": {},
    "1.8.8": {},
    "1.8.9": {},
    "1.12.2": {},
    "1.14.4": {"mappings": True},
    "1.16.5": {"mappings": True},
    "1.17.1": {"mappings": True},
    "1.18.1": {"mappings": True},
    "1.18.2": {"mappings": True},
    "1.19.2": {"mappings": True},
    "1.20.1": {"mappings": True},
    "1.20.4": {"mappings": True},
    "1.20.6": {"mappings": True},
    "1.21": {"mappings": True},
    "1.21.1": {"mappings": True},
    "1.21.3": {"mappings": True},
    "1.21.4": {"mappings": True},
    "1.21.5": {"mappings": True},
    "1.21.6": {"mappings": True},
    "1.21.7": {"mappings": True},
    "1.21.8": {"mappings": True},
    "1.21.9": {"mappings": True},
    "1.21.10": {"mappings": True},
    "1.21.11": {"mappings": True},
    "26.1-snapshot-9": {},
}

minecraft = use_extension("@rules_mc//:extensions.bzl", "minecraft")

[
    minecraft.version(
        assets = True,
        client = True,
        client_mappings = entry.get("mappings", False),
        server = entry.get("server", True),
        server_mappings = entry.get("server", True) and entry.get("mappings", False),
        version = version,
    )
    for version, entry in game_versions.items()
]

minecraft.exclude_library(names = [
    "org.ow2.asm:asm:9.3",
    "org.ow2.asm:asm:9.6",
])
use_repo(minecraft, "minecraft")
use_repo(minecraft, "minecraft_assets")
